# turborepo-rust-next

./: .editorconfig  .gitattributes  .gitignore  .prettierrc  .rustfmt.toml  Cargo.toml  build.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/web/: next.config.mjs  package.json  vercel.json
apps/web/api/: Cargo.toml  greet.rs
apps/web/app/: layout.tsx  metadata.ts  page.tsx
crates/build_crates/: Cargo.toml
crates/build_crates/src/: args.rs  build.rs  main.rs  members.rs  utils.rs
crates/greet/: Cargo.toml
crates/greet/src/: lib.rs
scripts/: build-rust.sh  install-rust.sh
