[workspace]
resolver = "2"
members = [
    # Vercel Rust Runtime
    "apps/web/api",
    # Build Crates
    "crates/build_crates",
    # Example crate to build
    "crates/example"
]
default-members = [
    # Vercel Rust Runtime
    "apps/web/api",
    # Build Crates
    "crates/build_crates",
    # Example crate to build
    "crates/example"
]
