[workspace]
resolver = "2"
members = [
    # Vercel Rust Runtime
    "apps/web/api",
    # Build Crates
    "crates/build_crates",
    "crates/greet"
]
default-members = [
    # Vercel Rust Runtime
    "apps/web/api",
    # Build Crates
    "crates/build_crates",
    "crates/greet"
]

[[member]]
path = "crates/*"
ignore = ["crates/build_crates"]
