[package]
name = "build_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
clap = "4.2.1"
colored = "2.0.0"
glob = "0.3.1"
serde = { version = "1.0.159", features = ["derive"] }
toml = "0.7.3"
chrono = "0.4.19"
crossbeam-channel = "0.5.7"